--- a/app.css
+++ b/app.css
@@ -49,10 +49,24 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 .icon-active {
-  transform: rotate(360deg);
-  color: var(--color-1);
+  animation: flash 1s ease-out;
+  animation-fill-mode: forwards;
+}
+
+@keyframes flash {
+  0% {
+    transform: scale(1) rotate(0);
+  }
+  80% {
+    transform: scale(1.3) rotate(270deg);
+  }
+  100% {
+    transform: scale(1) rotate(360deg);
+    color: var(--color-1);
+  }
 }
 .main {
   text-align: center;
@@ -66,6 +80,50 @@ body {
   outline: none;
   color: inherit;
   background-color: transparent;
-  border-bottom: 2px solid var(--color-3);
+  border-bottom: 2px solid var(--color-2);
   font-size: inherit;
+  transition: opacity 2.5s ease-out;
+}
+.correct-res {
+  animation: correct 0.6s infinite;
+  border: none;
+}
+.wrapper {
+  gap: 1rem;
+}
+.wrong-res {
+  color: var(--color-1);
+  opacity: 0;
+  border: none;
+}
+
+@keyframes correct {
+  0% {
+    transform: translateY(-5%);
+  }
+  80% {
+    transform: translateY(15%);
+  }
+}
+.stats {
+  margin-top: 10rem;
+  text-align: center;
+  display: grid;
+  column-gap: 1rem;
+  row-gap: 3rem;
+  font-size: 4rem;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+}
+.stats div:not(:first-child) {
+  border-bottom: 1px solid var(--color-2);
+}
+.stats .icon {
+  font-size: 4rem;
+}
+.stats .icon:nth-child(2),
+.stats .icon:nth-child(3),
+.stats .icon:nth-child(4),
+.stats .icon:nth-child(7) {
+  border: none;
 }
