--- a/app.css
+++ b/app.css
@@ -14,7 +14,7 @@ html {
   font-size: 62.5%;
 }
 body {
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'Kode Mono', monospace;
 }
 .util-flex {
   display: flex;
@@ -36,7 +36,7 @@ body {
 }
 .menu {
   gap: 6rem;
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
 }
 .levels,
 .operators {
@@ -44,6 +44,7 @@ body {
   gap: 3rem;
 }
 .icon {
+  display: inline-block;
   font-size: 5rem;
   transition: all 1s ease-out;
   display: flex;
@@ -106,24 +107,20 @@ body {
   }
 }
 .stats {
-  margin-top: 10rem;
-  text-align: center;
-  display: grid;
-  column-gap: 1rem;
-  row-gap: 3rem;
-  font-size: 4rem;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  padding: 0 3rem;
+  font-size: 2rem;
+  margin-bottom: 2rem;
 }
-.stats div:not(:first-child) {
-  border-bottom: 1px solid var(--color-2);
+.stats--info {
+  justify-content: space-between;
 }
-.stats .icon {
-  font-size: 4rem;
+.stats--info:not(:last-child) {
+  margin-bottom: 0.5rem;
 }
-.stats .icon:nth-child(2),
-.stats .icon:nth-child(3),
-.stats .icon:nth-child(4),
-.stats .icon:nth-child(7) {
-  border: none;
+.stats--info-header {
+  font-weight: 400;
+}
+.stats--info-info {
+  font-size: 2.5rem;
+  font-weight: 700;
 }
