--- a/app.css
+++ b/app.css
@@ -15,6 +15,8 @@ html {
 }
 body {
   font-family: 'Kode Mono', monospace;
+  height: 100vh;
+  overflow: clip;
 }
 .util-flex {
   display: flex;
@@ -28,8 +30,8 @@ body {
   padding: 1rem;
   background-image: linear-gradient(
     to bottom right,
-    var(--color-3),
-    var(--color-4)
+    var(--color-3) 10%,
+    var(--color-4) 50%
   );
   color: var(--color-2);
   flex-direction: column;
@@ -45,7 +47,7 @@ body {
 }
 .icon {
   display: inline-block;
-  font-size: 5rem;
+  font-size: 4rem;
   transition: all 1s ease-out;
   display: flex;
   justify-content: center;
@@ -71,7 +73,7 @@ body {
 }
 .main {
   text-align: center;
-  font-size: 6rem;
+  font-size: 4.3rem;
 }
 .result {
   width: 40%;
@@ -86,7 +88,7 @@ body {
   transition: opacity 2.5s ease-out;
 }
 .correct-res {
-  animation: correct 0.6s infinite;
+  animation: correct 0.9s infinite;
   border: none;
 }
 .wrapper {
@@ -108,8 +110,8 @@ body {
 }
 .stats {
   padding: 0 3rem;
-  font-size: 2rem;
-  margin-bottom: 2rem;
+  font-size: 1.6rem;
+  margin-bottom: 1.6rem;
 }
 .stats--info {
   justify-content: space-between;
@@ -121,6 +123,6 @@ body {
   font-weight: 400;
 }
 .stats--info-info {
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   font-weight: 700;
 }
